maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: ':' expected but ',' found.
def remplissageCase(x,y,i):{
                     ^JediEscaper:41: error: identifier expected but '}' found.
}
^